Changelog for Hearthstone (v1.3.1-SNAPSHOT)

2013-02-10 17:35:18 +0000    update localisation (James Richardson)
2013-02-10 17:29:56 +0000    forgot to call super when loading configuration (James Richardson)
2013-02-10 17:26:39 +0000    add default database settings (James Richardson)
2013-02-10 17:22:33 +0000    fix NPE error when retrieving database classes (James Richardson)
2013-02-10 13:55:16 +0000    final clean up of Hearthstone (James Richardson)
2013-02-10 13:51:06 +0000    fix HomeCommand (James Richardson)
2013-02-10 13:45:07 +0000    updated teleport command (James Richardson)
2013-02-10 13:31:08 +0000    updated SetCommand (James Richardson)
2013-02-10 13:21:34 +0000    remove another reference to database handler (James Richardson)
2013-02-10 13:20:59 +0000    Refactored DatabaseHandler into HomeRecord (James Richardson)
2013-02-10 13:14:32 +0000    update to new schema (James Richardson)
2013-02-10 13:05:15 +0000    update pom to new format (James Richardson)

v1.3.0
2012-06-16 01:09:50 +0100    Added auto updater (James Richardson)

v1.2.2
2012-03-25 00:16:53 +0000    reverted change in SetCommand (James Richardson)
2012-03-25 00:15:18 +0000    Build against latest version of BukkitUtilities (James Richardson)

v1.2.1
2012-02-27 22:11:14 +0000    altered pom to not auto deploy sites (throwing an exception) (James Richardson)
2012-02-27 22:04:04 +0000    alter POM to not publish snapshots when installing artifacts locally (James Richardson)
2012-02-27 22:01:43 +0000    update changelog, prepare to release (James Richardson)
2012-02-27 21:58:26 +0000    add site directory (James Richardson)
2012-02-27 21:58:12 +0000    build against latest BukkitUtilities (James Richardson)
2012-02-27 21:55:22 +0000    updated POM to add licence and developer information (James Richardson)
2012-02-27 21:46:51 +0000    updated pom to match my other projects (James Richardson)
2012-02-24 20:04:17 +0000    added README (James Richardson)

v1.2.0