@@ -1,5 +1,5 @@
 # Plugin messages
-plugin-description: Simple multiworld homes.
+hearthstone.description: Simple multiworld homes.
 worldguard-hooked: Found {0}.
 
 # SetCommand localisation
